# z3rno-starter-kit

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: smoke.yml
examples/: 01_chat_agent.py  02_customer_support.py  03_sql_copilot.py  04_code_memory.py  05_research_notebook.py
tests/: test_examples_smoke.py
