[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "z3rno-starter-kit"
version = "0.1.0"
description = "Five worked examples showing how to build with Z3rno — chat agent, customer support, SQL copilot, code memory, research notebook."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "The AI Project Co.", email = "engineering@z3rno.dev" },
]
keywords = ["z3rno", "examples", "ai-agents", "memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "z3rno>=0.4.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.6",
  "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
# This is an examples repo — nothing importable ships in the wheel.
# We declare an empty package so hatchling stops complaining.
bypass-selection = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["examples", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "S", "A", "T20", "SIM", "RUF", "PT", "PL", "TRY", "PERF"]
ignore = ["E501", "S101", "PLR0913", "TRY003", "PLR2004", "T201"]  # T201: print is fine in examples

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["INP001", "T201", "S105"]
"tests/**/*.py" = ["S101", "INP001"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["z3rno", "z3rno.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
